--- a/.ddev/docker-compose.python.yaml
+++ b/.ddev/docker-compose.python.yaml
@@ -1,7 +1,7 @@
 services:
   python:
     container_name: ddev-${DDEV_SITENAME}-python
-    image: python:3.13-alpine
+    image: python:3.14-alpine
     labels:
       com.ddev.site-name: ${DDEV_SITENAME}
       com.ddev.approot: ${DDEV_APPROOT}
@@ -10,11 +10,13 @@ services:
       dockerfile: ./.ddev/python/Containerfile
       target: builder
       args:
-        PYTHON_TAG: 3.13-alpine
+        PYTHON_TAG: 3.14-alpine
         PYTHON_PORT: 5000
     volumes:
       - ".:/mnt/ddev_config"
     environment:
       FLASK_RUN_PORT: 5000
+      FLASK_APP: jean-pyarre
+      FLASK_RUN_HOST: 0.0.0.0
     depends_on:
       - db
