Update core & contrib modules

--- a/config/sync/views.view.files.yml
+++ b/config/sync/views.view.files.yml
@@ -1155,6 +1155,7 @@ display:
           empty_table: true
           caption: ''
           description: ''
+          class: ''
       row:
         type: fields
         options: {  }
