--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         "oomphinc/composer-installers-extender": "^2.0"
     },
     "require-dev": {
-        "johnatas-x/angry-bearded": "3.1.0-rc4",
+        "johnatas-x/angry-bearded": "3.1.0",
         "roave/security-advisories": "dev-latest"
     },
     "conflict": {
